# prediction-of-machine-failure

./: pyproject.toml  requirements.txt
data/: Dataset.csv
notebooks/: task.ipynb
src/: plotting.py  processing.py
