[tool.poetry]
name = "prediction-of-machine-failure"
version = "0.1.0"
description = "Predicting industrial machines failure with a machine learning model"
authors = ["ghazwan namou jablak <ghazwan.namou_jablak@syngenta.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.3.1"
matplotlib = "^3.10.5"
seaborn = "^0.13.2"
scikit-learn = "^1.7.1"
imblearn = "^0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
